--- a/sub/cwhi.html
+++ b/sub/cwhi.html
@@ -1,82 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Các web hữu ích</title>
-    <link rel="stylesheet" href="/sub/cwhi.css" />
-  </head>
-  <body class="background">
-    <header>
-      <div id="header">
-        <div
-          class="avatar"
-          style="background-color: #303c54; border-top-right-radius: 10%"
-        >
-          <br /><br /><br />
-          <img
-            src="/Class/Media/avatar.jpg"
-            alt="đây là avatar"
-            height="auto"
-            width="70%"
-            style="border-radius: 50%"
-          />
-        </div>
-        <div class="name">
-          <br /><br /><br /><br /><br /><br />
-          <p class="name1">NGUYỄN TRẦN ĐÌNH TUẤN</p>
-          <p class="name2">Công nghệ thông tin K48</p>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Các web hữu ích</title>
+  <link rel="stylesheet" href="/sub/cwhi.css" />
+</head>
+
+<body class="background">
+  <header>
+    <div id="header">
+      <div class="avatar" style="background-color: #303c54; border-top-right-radius: 10%">
+        <br /><br /><br />
+        <img src="/Class/Media/avatar.jpg" alt="đây là avatar" height="auto" width="70%" style="border-radius: 50%" />
       </div>
-      <div class="info">
-        <div class="text-info">
-          <p>🎂 23/12/2001</p>
-          <p>☎ 0375079607</p>
-          <p>✉ 24T1020534@husc.edu.vn</p>
-          <p>⚑ 24 Trần Văn Trà, Hương Vân, Hương Trà</p>
-        </div>
+      <div class="name">
+        <br /><br /><br /><br /><br /><br />
+        <p class="name1">NGUYỄN TRẦN ĐÌNH TUẤN</p>
+        <p class="name2">Công nghệ thông tin K48</p>
       </div>
-    </header>
-    <div id="body-container">
-      <div
-        class="skill"
-        style="background-color: #303c54; border-bottom-right-radius: 10%"
-      >
-        <div>
-          <p class="name3">THÔNG TIN</p>
-          <p class="underl">_____________________</p>
-        </div>
-        <div class="name4">
-          <nav class="nav-menu">
-            <a href="/sub/hthw.html" class="nav-link">❤︎ Hành trình học web</a>
-            <br /><br />
-            <a href="/sub/cwhi.html" class="nav-link">❤︎ Các web hữu ích</a>
-            <br /><br />
-            <a href="/sub/btn.html" class="nav-link">❤︎ Blog trải nghiệm </a>
-          </nav>
-        </div>
-        <div>
-          <p class="name3">SỞ THÍCH</p>
-          <p class="underl">_____________________</p>
-        </div>
-        <div class="name4">
-          <p>❤︎ Đọc truyện, xem phim</p>
-          <p>❤︎ Chơi game</p>
-          <p>❤︎ Nghe mọi thể loại nhạc</p>
-          <p>❤︎ Ngủ</p>
-        </div>
+    </div>
+    <div class="info">
+      <div class="text-info">
+        <p>🎂 23/12/2001</p>
+        <p>☎ 0375079607</p>
+        <p>✉ 24T1020534@husc.edu.vn</p>
+        <p>⚑ 24 Trần Văn Trà, Hương Vân, Hương Trà</p>
       </div>
-      <div class="history">
+    </div>
+  </header>
+  <div id="body-container">
+    <div class="skill" style="background-color: #303c54; border-bottom-right-radius: 10%">
+      <div>
+        <p class="name3">THÔNG TIN</p>
+        <p class="underl">_____________________</p>
+      </div>
+      <div class="name4">
+        <nav class="nav-menu">
+          <a href="/sub/hthw.html" class="nav-link">❤︎ Hành trình học web</a>
+          <br /><br />
+          <a href="/sub/cwhi.html" class="nav-link">❤︎ Các web hữu ích</a>
+          <br /><br />
+          <a href="/sub/btn.html" class="nav-link">❤︎ Blog trải nghiệm </a>
+        </nav>
+      </div>
+      <div>
+        <p class="name3">SỞ THÍCH</p>
+        <p class="underl">_____________________</p>
+      </div>
+      <div class="name4">
+        <p>❤︎ Đọc truyện, xem phim</p>
+        <p>❤︎ Chơi game</p>
+        <p>❤︎ Nghe mọi thể loại nhạc</p>
+        <p>❤︎ Ngủ</p>
+      </div>
+    </div>
+    <div class="history">
+      <div>
+        <p class="name3">CÁC WEB HỮU ÍCH</p>
+        <p class="underl">
+          _____________________________________________________________________
+        </p>
         <div>
-          <p class="name3">CÁC WEB HỮU ÍCH</p>
-          <p class="underl">
-            _____________________________________________________________________
-          </p>
-        </div>
-        <div class="name4">
-          <a href="https://www.w3schools.com/" target="_blank" class="nav-link"
-            >W3schools</a
-          >
+          <a href="https://www.w3schools.com/" target="_blank" class="nav-link">W3schools</a>
           <p class="des">
             W3Schools là một trang web giáo dục freemium để học lập trình trực
             tuyến. Ban đầu được phát hành vào năm 1998, nó có tên bắt nguồn từ
@@ -85,9 +72,7 @@
             W3Schools cũng xuất bản các mẫu HTML miễn phí.
           </p>
           <br />
-          <a href="https://hocwebchuan.com/" target="_blank" class="nav-link"
-            >Hocwebchuan</a
-          >
+          <a href="https://hocwebchuan.com/" target="_blank" class="nav-link">Hocwebchuan</a>
           <p class="des">
             Học Web Chuẩn ra đời mục đích nhằm giúp cho những ai quan tâm tới
             web có nơi để giao lưu học hỏi và để tham khảo. Đối tượng của Học
@@ -98,9 +83,7 @@
             những dòng code đẹp.
           </p>
           <br />
-          <a href="https://vietjack.com/" target="_blank" class="nav-link"
-            >Vietjack</a
-          >
+          <a href="https://vietjack.com/" target="_blank" class="nav-link">Vietjack</a>
           <p class="des">
             VietJack là một website về giáo dục phổ thông trực tuyến tại Việt
             Nam. Đối tượng sử dụng khá phổ biến, có thể là học sinh, sinh viên,
@@ -120,23 +103,20 @@
         </div>
       </div>
     </div>
-    <footer class="chan">
-      <br /><br />
-      <img
-        src="/Class/Media/dai-maou.png"
-        alt=""
-        width="1850px"
-        height="598px"
-        style="opacity: 1"
-      />
-      <div class="ct">
-        <p>Contact: Nguyen Tran Dinh Tuan</p>
+  </div>
+  </div>
+  <footer class="chan">
+    <br /><br />
+    <img src="/Class/Media/dai-maou.png" alt="" width="1850px" height="598px" style="opacity: 1" />
+    <div class="ct">
+      <p>Contact: Nguyen Tran Dinh Tuan</p>
 
-        <p>Email: 24t1020534@husc.edu.vn</p>
+      <p>Email: 24t1020534@husc.edu.vn</p>
 
-        <p>Tel: 0375079607</p>
-      </div>
-    </footer>
-  </body>
+      <p>Tel: 0375079607</p>
+    </div>
+  </footer>
+</body>
+
 </html>
 <nav class="nav-menu"></nav>
