--- a/sub/btn.html
+++ b/sub/btn.html
@@ -67,14 +67,14 @@
           <p>❤︎ Ngủ</p>
         </div>
       </div>
-      <div class="history">
+      <div id="history2">
         <div>
           <p class="name7">BLOG TRẢI NGHIỆM</p>
           <p class="underl">
             _____________________________________________________________________
           </p>
         </div>
-        <div class="name6">
+        <div class="chamhoi">
           <div class="des">
             <p>
               Chào mọi người, đây là blog của mình và mình là Nguyễn Trần Đình
