--- a/sub/hthw.html
+++ b/sub/hthw.html
@@ -3,33 +3,145 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hành trình học web</title>
-    <link rel="stylesheet" href="/sty.css" />
+    <title>Các web hữu ích</title>
+    <link rel="stylesheet" href="/sub/hthw.css" />
   </head>
-  <body
-    style="background-image: url(/img/background.jpg); background-size: cover"
-  >
-    <div class="header">
-      <h1 class="header-text">Nguyễn Trần Đình Tuấn</h1>
-      <br />
-      <nav class="nav-menu" style="background-color: antiquewhite">
-        <a href="/animasquad/index.html" class="nav-link">Trang web đầu tiên</a>
-        <a href="/B1/B1/inde.html" class="nav-link">Bài tập thẻ a</a>
-        <a href="/bt1/bt1.html" class="nav-link">Bài tập 1</a>
-        <a href="/bt2/bt2.html" class="nav-link">Bài tập 2</a>
-        <a href="/bt3/bt3.html" class="nav-link">Bài tập 3</a>
-        <a href="/bt4/bt4.html" class="nav-link">Bài tập 4</a>
-        <a href="/bt5/bt5.html" class="nav-link">Bài tập 5</a>
-        <a href="/btvn1/form/index.html" class="nav-link">Bài tập form</a>
-        <a href="/btvn1/tkb/index.html" class="nav-link">Bài tập TKB</a>
-        <a href="/btvn1/bangdiem/index.html" class="nav-link"
-          >Bài tập bảng điểm</a
+
+  <body class="background">
+    <header>
+      <div id="header">
+        <div
+          class="avatar"
+          style="background-color: #303c54; border-top-right-radius: 10%"
         >
-        <a href="/btvn2/index.html" class="nav-link">Bài tập Media</a>
-        <a href="/Class/B/B6/index.html" class="nav-link">Bài tập CSS</a>
-      </nav>
-      <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-      <a href="/home.html" class="nav-back">Trở về trang chủ</a>
+          <br /><br /><br />
+          <img
+            src="/Class/Media/avatar.jpg"
+            alt="đây là avatar"
+            height="auto"
+            width="70%"
+            style="border-radius: 50%"
+          />
+        </div>
+        <div class="name">
+          <br /><br /><br /><br /><br /><br />
+          <p class="name1">NGUYỄN TRẦN ĐÌNH TUẤN</p>
+          <p class="name2">Công nghệ thông tin K48</p>
+        </div>
+      </div>
+      <div class="info">
+        <div class="text-info">
+          <p>🎂 23/12/2001</p>
+          <p>☎ 0375079607</p>
+          <p>✉ 24T1020534@husc.edu.vn</p>
+          <p>⚑ 24 Trần Văn Trà, Hương Vân, Hương Trà</p>
+        </div>
+      </div>
+    </header>
+    <div id="body-container">
+      <div
+        class="skill"
+        style="background-color: #303c54; border-bottom-right-radius: 10%"
+      >
+        <div>
+          <p class="name3">THÔNG TIN</p>
+          <p class="underl">_____________________</p>
+        </div>
+        <div class="name4"><br><br><br>
+          <nav class="nav-menu"><br>
+            <a href="/sub/hthw.html" class="nav-link">❤︎ Hành trình học web</a>
+            <br /><br />
+            <a href="/sub/cwhi.html" class="nav-link">❤︎ Các web hữu ích</a>
+            <br /><br />
+            <a href="/sub/btn.html" class="nav-link">❤︎ Blog trải nghiệm </a>
+          </nav>
+        </div>
+        <div>
+          <p class="name3">SỞ THÍCH</p>
+          <p class="underl">_____________________</p>
+        </div>
+        <div class="name4"><br><br><br>
+          <p>❤︎ Đọc truyện, xem phim</p>
+          <p>❤︎ Chơi game</p>
+          <p>❤︎ Nghe mọi thể loại nhạc</p>
+          <p>❤︎ Ngủ</p>
+        </div>
+      </div>
+      <div id="history2">
+        <div>
+          <p class="name3">HÀNH TRÌNH HỌC WEB</p>
+          <p class="underl">
+            _____________________________________________________________________
+          </p>
+          <br><br><br><br><br>
+          <nav class="nav-menu">
+            <ul>
+              <li>
+                <a href="/animasquad/index.html" class="nav-link"
+                  >Trang web đầu tiên</a
+                >
+              </li>
+              <li>
+                <a href="/B1/B1/inde.html" class="nav-link">Bài tập thẻ a</a>
+              </li>
+              <li>
+                <a href="/bt1/bt1.html" class="nav-link">Bài tập 1</a>
+              </li>
+              <li>
+                <a href="/bt2/bt2.html" class="nav-link">Bài tập 2</a>
+              </li>
+              <li>
+                <a href="/bt3/bt3.html" class="nav-link">Bài tập 3</a>
+              </li>
+              <li>
+                <a href="/bt4/bt4.html" class="nav-link">Bài tập 4</a>
+              </li>
+              <li>
+                <a href="/bt5/bt5.html" class="nav-link">Bài tập 5</a>
+              </li>
+              <li>
+                <a href="/btvn1/form/index.html" class="nav-link"
+                  >Bài tập form</a
+                >
+              </li>
+              <li>
+                <a href="/btvn1/tkb/index.html" class="nav-link">Bài tập TKB</a>
+              </li>
+              <li>
+                <a href="/btvn1/bangdiem/index.html" class="nav-link"
+                  >Bài tập bảng điểm</a
+                >
+              </li>
+              <li>
+                <a href="/btvn2/index.html" class="nav-link">Bài tập Media</a>
+              </li>
+              <li>
+                <a href="/Class/B/B6/index.html" class="nav-link"
+                  >Bài tập CSS</a
+                >
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </div>
+
+    <footer class="chan">
+      <br /><br />
+      <img
+        src="/Class/Media/dai-maou.png"
+        alt=""
+        width="1850px"
+        height="598px"
+        style="opacity: 1"
+      />
+      <div class="ct">
+        <p>Contact: Nguyen Tran Dinh Tuan</p>
+
+        <p>Email: 24t1020534@husc.edu.vn</p>
+
+        <p>Tel: 0375079607</p>
+      </div>
+    </footer>
   </body>
 </html>
